Remove /api/compte endpoint annotation from swagger
